update: show the winner & hide the dice

--- a/style.css
+++ b/style.css
@@ -173,3 +173,11 @@ main {
   font-size: 2rem;
   font-style: italic;
 }
+
+.display-none {
+  display: none;
+}
+
+.display-inline-block {
+  display: inline-block;
+}
